# LENS

./: .gitignore  README.md  lens.spec  pyproject.toml
.github/workflows/: release.yml
lens/: __init__.py  __main__.py  _resources.py  app.py  cli.py  config.py  main.py
lens/data/: __init__.py  euronext.py  parser.py  yahoo.py
lens/db/: __init__.py  schema.sql  store.py
lens/portfolio/: __init__.py  analytics.py  tracker.py
lens/screener/: __init__.py  engine.py
lens/ui/: __init__.py  main_window.py  sidebar.py  stylesheet.qss  theme.py  widgets.py  workers.py
lens/ui/screens/: __init__.py  alerts.py  calendar.py  chart.py  comparison.py  dashboard.py  deep_dive.py  devlogs.py  homepage.py  macro.py  portfolio.py  quote.py  screener.py  settings.py
lens/ui/widgets/: __init__.py  chart_widget.py  data_table.py  news_widget.py  price_label.py  search_bar.py  stat_card.py
