[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lens"
version = "0.1.0"
description = "A CLI-first European equity terminal for serious retail investors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "typer>=0.9.0",
    "plotext>=5.2.8",
    "lxml>=5.0.0",
]

[project.scripts]
lens = "lens.main:main"

[tool.hatch.build.targets.wheel]
packages = ["lens"]

[tool.hatch.metadata]
allow-direct-references = true
